--- a/packages/react-components/react-motion-preview/package.json
+++ b/packages/react-components/react-motion-preview/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@fluentui/react-drawer",
-  "version": "9.0.0-beta.12",
-  "description": "Drawer components for Fluent UI React",
+  "name": "@fluentui/react-motion-preview",
+  "version": "0.0.0",
+  "private": true,
+  "description": "New fluentui react package",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "typings": "./dist/index.d.ts",
@@ -14,32 +15,24 @@
   "scripts": {
     "build": "just-scripts build",
     "clean": "just-scripts clean",
-    "code-style": "just-scripts code-style",
-    "e2e": "cypress run --component",
-    "e2e:local": "cypress open --component",
-    "just": "just-scripts",
-    "lint": "just-scripts lint",
-    "test": "jest --passWithNoTests",
-    "type-check": "tsc -b tsconfig.json",
     "generate-api": "just-scripts generate-api",
-    "storybook": "start-storybook",
+    "lint": "just-scripts lint",
     "start": "yarn storybook",
-    "test-ssr": "test-ssr \"./stories/**/*.stories.tsx\""
+    "storybook": "start-storybook",
+    "test": "jest --passWithNoTests",
+    "test-ssr": "test-ssr \"./stories/**/*.stories.tsx\"",
+    "type-check": "tsc -b tsconfig.json"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
     "@fluentui/react-conformance": "*",
     "@fluentui/react-conformance-griffel": "*",
     "@fluentui/scripts-api-extractor": "*",
-    "@fluentui/scripts-tasks": "*",
-    "@fluentui/scripts-cypress": "*"
+    "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-dialog": "^9.5.20",
-    "@fluentui/react-jsx-runtime": "9.0.0-alpha.13",
-    "@fluentui/react-shared-contexts": "^9.7.1",
+    "@fluentui/react-jsx-runtime": "^9.0.0-alpha.13",
     "@fluentui/react-theme": "^9.1.10",
-    "@fluentui/react-motion-preview": "^0.0.0",
     "@fluentui/react-utilities": "^9.11.0",
     "@griffel/react": "^1.5.7",
     "@swc/helpers": "^0.4.14"
@@ -50,13 +43,6 @@
     "react": ">=16.8.0 <19.0.0",
     "react-dom": ">=16.8.0 <19.0.0"
   },
-  "beachball": {
-    "disallowedChangeTypes": [
-      "major",
-      "minor",
-      "patch"
-    ]
-  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -65,5 +51,11 @@
       "require": "./lib-commonjs/index.js"
     },
     "./package.json": "./package.json"
+  },
+  "beachball": {
+    "disallowedChangeTypes": [
+      "major",
+      "prerelease"
+    ]
   }
 }
