--- a/package.json
+++ b/package.json
@@ -234,6 +234,7 @@
     "eslint-plugin-jest": "23.20.0",
     "eslint-plugin-jsdoc": "^36.0.7",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-playwright": "0.15.3",
     "eslint-plugin-react": "7.26.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "express": "4.17.3",
