--- a/packages/react-components/react-tabster/package.json
+++ b/packages/react-components/react-tabster/package.json
@@ -37,7 +37,7 @@
     "@griffel/react": "^1.5.14",
     "@swc/helpers": "^0.4.14",
     "keyborg": "^2.0.0",
-    "tabster": "^4.7.0"
+    "tabster": "4.8.0-canary.0"
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0 <19.0.0",
