chore: migrate to use JSX importSource

--- a/packages/react-components/react-dialog/.swcrc
+++ b/packages/react-components/react-dialog/.swcrc
@@ -19,7 +19,8 @@
     "externalHelpers": true,
     "transform": {
       "react": {
-        "runtime": "classic",
+        "runtime": "automatic",
+        "importSource": "@fluentui/react-jsx-runtime",
         "useSpread": true
       }
     },
