--- a/packages/react-components/react-drawer/package.json
+++ b/packages/react-components/react-drawer/package.json
@@ -40,6 +40,7 @@
     "@fluentui/react-shared-contexts": "^9.7.2",
     "@fluentui/react-theme": "^9.1.11",
     "@fluentui/react-utilities": "^9.11.2",
+    "@fluentui/react-motion-preview": "^0.1.0",
     "@griffel/react": "^1.5.14",
     "@swc/helpers": "^0.4.14"
   },
