--- a/packages/react-components/react-motion-preview/package.json
+++ b/packages/react-components/react-motion-preview/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@fluentui/react-jsx-runtime": "^9.0.2",
+    "@fluentui/react-shared-contexts": "^9.7.2",
     "@fluentui/react-theme": "^9.1.11",
     "@fluentui/react-utilities": "^9.12.0",
     "@griffel/react": "^1.5.14",
