--- a/packages/react-components/react-provider/package.json
+++ b/packages/react-components/react-provider/package.json
@@ -33,6 +33,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/react-icons": "^2.0.207",
     "@fluentui/react-shared-contexts": "^9.7.2",
     "@fluentui/react-tabster": "^9.12.4",
     "@fluentui/react-theme": "^9.1.11",
