test virtual parents with tabster context

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint:log:lerna": "FORCE_COLOR=0 lerna run lint --stream --no-bail > lint.log 2>&1",
     "perf": "yarn workspace @fluentui/perf perf:test",
     "perf:debug": "yarn workspace @fluentui/perf perf:test:debug",
-    "postinstall": "node ./scripts/package-manager/postinstall.js",
+    "postinstall": "node ./scripts/package-manager/postinstall.js && yarn patch-package",
     "preinstall": "node ./scripts/package-manager/use-yarn-please.js",
     "publish:beachball": "beachball publish -b origin/master --access public -y",
     "rebuild": "node ./scripts/executors/invalidate-just-cache.js && yarn build --reset-cache",
@@ -289,6 +289,7 @@
     "p-queue": "6.6.2",
     "parallel-webpack": "2.6.0",
     "parse-diff": "0.7.1",
+    "patch-package": "8.0.0",
     "path-browserify": "1.0.1",
     "plop": "2.6.0",
     "portfinder": "1.0.28",
