copy v8 TimePicker with basic story and v8 unit tests

--- a/packages/react-components/react-timepicker-compat-preview/package.json
+++ b/packages/react-components/react-timepicker-compat-preview/package.json
@@ -34,6 +34,10 @@
     "@fluentui/react-jsx-runtime": "^9.0.12",
     "@fluentui/react-theme": "^9.1.14",
     "@fluentui/react-utilities": "^9.13.5",
+    "@fluentui/react": "^8.111.2",
+    "@fluentui/react-hooks": "^8.6.29",
+    "@fluentui/utilities": "^8.13.18",
+    "@fluentui/date-time-utilities": "^8.5.13",
     "@griffel/react": "^1.5.14",
     "@swc/helpers": "^0.5.1"
   },
