chore(react-conformance): add missing beachbal config to align with all v9 family of packages

--- a/packages/react-conformance/package.json
+++ b/packages/react-conformance/package.json
@@ -19,6 +19,12 @@
     "generate-api": "just-scripts generate-api",
     "type-check": "just-scripts type-check"
   },
+  "beachball": {
+    "disallowedChangeTypes": [
+      "major",
+      "prerelease"
+    ]
+  },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
     "@fluentui/scripts-jest": "*",
