ci: use custom yarn dedupe alias for local and ci dx

--- a/.github/workflows/check-packages.yml
+++ b/.github/workflows/check-packages.yml
@@ -26,11 +26,11 @@ jobs:
         run: |
           echo "yarn.lock changed! Verifying package deduplication ..."
 
-          npx yarn-deduplicate --strategy fewer --list --fail
+          yarn run dedupe --list --fail
 
           if [[ $? -ne 0 ]]; then
             echo "Your changes introduced package duplication 🚨"
-            echo "Run 'npx yarn-deduplicate --strategy fewer' to fix those."
+            echo "Run 'yarn run dedupe' to fix those."
           else
             echo "No duplicate packages introduced ✅"
           fi
