--- a/packages/react-components/react-timepicker-compat-preview/tsconfig.json
+++ b/packages/react-components/react-timepicker-compat-preview/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.all.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2019",
     "noEmit": true,
