--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@fluentui/react-breadcrumb-preview": "*",
     "@fluentui/react-datepicker-compat": "*",
+    "@fluentui/react-message-bar-preview": "*",
     "@fluentui/react-migration-v8-v9": "*",
     "@fluentui/react-migration-v0-v9": "*",
     "@fluentui/react": "*",
@@ -41,7 +42,6 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-window": "^1.8.6",
-    "tslib": "^2.1.0",
-    "@fluentui/react-message-bar-preview": "*"
+    "tslib": "^2.1.0"
   }
 }
