--- a/tsconfig.base.all.json
+++ b/tsconfig.base.all.json
@@ -134,6 +134,7 @@
       "@fluentui/react-progress": ["packages/react-components/react-progress/src/index.ts"],
       "@fluentui/react-provider": ["packages/react-components/react-provider/src/index.ts"],
       "@fluentui/react-radio": ["packages/react-components/react-radio/src/index.ts"],
+      "@fluentui/react-rating-preview": ["packages/react-components/react-rating-preview/src/index.ts"],
       "@fluentui/react-search-preview": ["packages/react-components/react-search-preview/src/index.ts"],
       "@fluentui/react-select": ["packages/react-components/react-select/src/index.ts"],
       "@fluentui/react-shared-contexts": ["packages/react-components/react-shared-contexts/src/index.ts"],
@@ -154,6 +155,9 @@
       "@fluentui/react-textarea": ["packages/react-components/react-textarea/src/index.ts"],
       "@fluentui/react-theme": ["packages/react-components/react-theme/src/index.ts"],
       "@fluentui/react-theme-sass": ["packages/react-components/react-theme-sass/src/index.ts"],
+      "@fluentui/react-timepicker-compat-preview": [
+        "packages/react-components/react-timepicker-compat-preview/src/index.ts"
+      ],
       "@fluentui/react-toast": ["packages/react-components/react-toast/src/index.ts"],
       "@fluentui/react-toolbar": ["packages/react-components/react-toolbar/src/index.ts"],
       "@fluentui/react-tooltip": ["packages/react-components/react-tooltip/src/index.ts"],
@@ -163,10 +167,7 @@
       "@fluentui/theme-designer": ["packages/react-components/theme-designer/src/index.ts"],
       "@fluentui/tokens": ["packages/tokens/src/index.ts"],
       "@fluentui/workspace-plugin": ["tools/workspace-plugin/src/index.ts"],
-      "@fluentui/react-timepicker-compat-preview": [
-        "packages/react-components/react-timepicker-compat-preview/src/index.ts"
-      ],
-      "@fluentui/react-rating-preview": ["packages/react-components/react-rating-preview/src/index.ts"]
+      "@fluentui/react-calendar-compat": ["packages/react-components/react-calendar-compat/src/index.ts"]
     }
   }
 }
