--- a/packages/react-components/react-timepicker-compat-preview/package.json
+++ b/packages/react-components/react-timepicker-compat-preview/package.json
@@ -31,6 +31,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/react-combobox": "^9.5.22",
     "@fluentui/react-jsx-runtime": "^9.0.15",
     "@fluentui/react-theme": "^9.1.14",
     "@fluentui/react-utilities": "^9.14.2",
