--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -248,6 +248,7 @@ packages/react-components/react-message-bar-preview @microsoft/teams-prg
 packages/react-components/react-timepicker-compat-preview @microsoft/teams-prg
 packages/react-components/react-rating-preview @microsoft/cxe-red @tomi-msft
 packages/react-components/react-calendar-compat @microsoft/cxe-red @sopranopillow
+packages/react-components/react-infolabel-preview @microsoft/cxe-red
 # <%= NX-CODEOWNER-PLACEHOLDER %>
 
 ## Components
