--- a/packages/react-components/react-calendar-compat/package.json
+++ b/packages/react-components/react-calendar-compat/package.json
@@ -31,7 +31,11 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/keyboard-keys": "^9.0.6",
+    "@fluentui/react-icons": "^2.0.217",
     "@fluentui/react-jsx-runtime": "^9.0.15",
+    "@fluentui/react-shared-contexts": "^9.10.0",
+    "@fluentui/react-tabster": "^9.13.5",
     "@fluentui/react-theme": "^9.1.14",
     "@fluentui/react-utilities": "^9.14.2",
     "@griffel/react": "^1.5.14",
