--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -78,7 +78,8 @@
     "@fluentui/react-virtualizer": "9.0.0-alpha.50",
     "@fluentui/react-tree": "^9.4.4",
     "@griffel/react": "^1.5.14",
-    "@swc/helpers": "^0.5.1"
+    "@swc/helpers": "^0.5.1",
+    "@fluentui/react-message-bar": "9.0.0-alpha.0"
   },
   "peerDependencies": {
     "@types/react": ">=16.14.0 <19.0.0",
