--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -247,6 +247,7 @@ packages/react-components/react-motion-preview @microsoft/cxe-prg @marcosmoura
 packages/react-components/react-message-bar @microsoft/teams-prg
 packages/react-components/react-timepicker-compat-preview @microsoft/teams-prg
 packages/react-components/react-rating-preview @microsoft/cxe-red @tomi-msft
+packages/react-components/react-swatch-picker-preview @microsoft/cxe-prg
 packages/react-components/react-calendar-compat @microsoft/cxe-red @sopranopillow
 packages/react-components/react-infolabel-preview @microsoft/cxe-red @sopranopillow
 # <%= NX-CODEOWNER-PLACEHOLDER %>
