disable 'no-restricted-globals' lint rule for apps

--- a/apps/pr-deploy-site/.eslintrc.json
+++ b/apps/pr-deploy-site/.eslintrc.json
@@ -12,6 +12,7 @@
         // turn off conflicting or unwanted rules from normal set
         "curly": "off",
         "no-var": "off",
+        "no-restricted-globals": "off",
         "vars-on-top": "off",
         "prefer-arrow-callback": "off"
       }
