fix: Use correct target windows for ResizeObserver
Updates all instance of ResizeObserver in react-components to be created
from the correct window global. The enforcement is not in the scope of
this PR and is already in progress in #28887.

Fixes #29509

--- a/packages/react-components/react-virtualizer/package.json
+++ b/packages/react-components/react-virtualizer/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@fluentui/react-jsx-runtime": "^9.0.17",
+    "@fluentui/react-shared-contexts": "^9.10.0",
     "@fluentui/react-utilities": "^9.15.0",
     "@griffel/react": "^1.5.14",
     "@swc/helpers": "^0.5.1"
