--- a/.devops/templates/tools.yml
+++ b/.devops/templates/tools.yml
@@ -9,8 +9,10 @@ steps:
     retryCountOnTaskFailure: 1
 
   - script: |
-      npm i -g yarn@1
-    displayName: 'Install yarn'
+      echo "nodejs:" && node -v
+      echo "yarn:" && yarn -v
+      echo "npm:" && npm -v
+    displayName: 'print NodeJS,package managers versions'
 
   # For multiline scripts, we want the whole task to fail if any line of the script fails.
   # ADO doesn't have bash configured this way by default. To fix we override the SHELLOPTS built-in variable.
