--- a/.devops/templates/tools.yml
+++ b/.devops/templates/tools.yml
@@ -2,6 +2,7 @@
 steps:
   - task: UseNode@1
     inputs:
+      # 👉 NOTE: we can use only versions that ship with container, otherwise we will run into nodejs installation issues
       # https://github.com/actions/runner-images/blob/ubuntu20/20230924.1/images/linux/Ubuntu2004-Readme.md#nodejs
       version: '16.20.2'
       checkLatest: false
