--- a/.devops/templates/tools.yml
+++ b/.devops/templates/tools.yml
@@ -2,9 +2,11 @@
 steps:
   - task: UseNode@1
     inputs:
-      # 👉 NOTE: we can use only versions that ship with container, otherwise we will run into nodejs installation issues
+      # 👉 NOTE:
+      # - we can use only versions that ship with container, otherwise we will run into nodejs installation issues.
+      # - as 1es bumps those versions within container automatically we need to use `<major>.x` to not run into issues once they bump the versions.
       # https://github.com/actions/runner-images/blob/ubuntu20/20230924.1/images/linux/Ubuntu2004-Readme.md#nodejs
-      version: '16.20.2'
+      version: '16.x'
       checkLatest: false
     displayName: 'Install Node.js'
     retryCountOnTaskFailure: 1
