--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@fluentui/react-breadcrumb-preview": "*",
     "@fluentui/react-datepicker-compat": "*",
+    "@fluentui/react-calendar-compat": "*",
     "@fluentui/react-migration-v8-v9": "*",
     "@fluentui/react-migration-v0-v9": "*",
     "@fluentui/react": "*",
