--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -42,7 +42,6 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-window": "^1.8.6",
-    "tslib": "^2.1.0",
-    "@fluentui/react-infolabel-preview": "*"
+    "tslib": "^2.1.0"
   }
 }
