Rating initial implementation

--- a/packages/react-components/react-rating-preview/package.json
+++ b/packages/react-components/react-rating-preview/package.json
@@ -31,8 +31,11 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/react-label": "9.1.45",
     "@fluentui/react-jsx-runtime": "^9.0.15",
+    "@fluentui/react-icons": "2.0.220",
     "@fluentui/react-theme": "^9.1.14",
+    "@fluentui/react-tabster": "9.13.6",
     "@fluentui/react-utilities": "^9.14.2",
     "@griffel/react": "^1.5.14",
     "@swc/helpers": "^0.5.1"
