chore(react-components): add verify-packaging check

--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -22,7 +22,8 @@
     "storybook": "start-storybook",
     "test": "jest --passWithNoTests",
     "type-check": "tsc -b tsconfig.json",
-    "generate-api": "just-scripts generate-api"
+    "generate-api": "just-scripts generate-api",
+    "verify-packaging": "just-scripts verify-packaging"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
